fix: weird spacing issues in group list (when edit mode active) and in analytics drawer

--- a/src/components/home/analytics/analytics.scss
+++ b/src/components/home/analytics/analytics.scss
@@ -35,7 +35,6 @@
 
     .drawer {
         padding: 15px 15px 0 15px;
-        max-height: 300px;
     }
 
     #no-analytics-available {
