--- a/src/components/module/module-body/module-body.scss
+++ b/src/components/module/module-body/module-body.scss
@@ -1,5 +1,5 @@
 .analytics-module-body {
-    padding: 15px;
+    margin: 15px;
 
     p {
         margin-bottom: 0;
